[gd_scene load_steps=4 format=3 uid="uid://ctlyoygw23pln"]

[ext_resource type="Script" uid="uid://bcdbc5la53q66" path="res://Scripts/intro_scene.gd" id="1_bbocs"]
[ext_resource type="FontFile" uid="uid://qjygu07tk4bf" path="res://font/fot-yuruka-std.ttf" id="2_lim1r"]
[ext_resource type="AudioStream" uid="uid://467afwpdar0m" path="res://assets/Sounds/Once-Colored Memories.ogg" id="3_lim1r"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbocs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 645.0
color = Color(0, 0, 0, 1)

[node name="IntroText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -11.5
offset_right = 246.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lim1r")
theme_override_font_sizes/font_size = 20
text = "Late into a quiet, weary night, Elise sat alone in her apartment..."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FlashOverlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1160.0
offset_bottom = 652.0

[node name="TextTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Intro_bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lim1r")

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
